8287552: riscv: Fix comment typo in li64

Co-authored-by: Dingli Zhang <dingli@iscas.ac.cn>
Reviewed-by: fyang